--- a/three.js/examples/art.html
+++ b/three.js/examples/art.html
@@ -2,7 +2,7 @@
 <head>
   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script> 
 <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.2/dist/aframe-extras.min.js"></script> 
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+<script src="https://bardionson.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
   <body>
   
